--- a/src/components/Homepage/WebVid/WebVid.css
+++ b/src/components/Homepage/WebVid/WebVid.css
@@ -1,5 +1,5 @@
 video#herovideo {
-    width: 100%;
+
     height: 100vh;
 }
 
@@ -26,6 +26,10 @@ video#herovideo {
 
 .bxslider {
     overflow: hidden;
+}
+
+.text-change {
+    text-align: left;
 }
 
 .vidContent {
@@ -110,6 +114,15 @@ video#herovideo {
 @media only screen and (min-width:0px) and (max-width:959px) {
     .bx-wrapper .social-icons a {
         display: none;
+    }
+
+    .vidContent {
+        top: 220px;
+        width: 90%;
+    }
+
+    .text-change {
+        text-align: center;
     }
 
 }
