--- a/src/components/Homepage/WebVid/jquery.bxslider.css
+++ b/src/components/Homepage/WebVid/jquery.bxslider.css
@@ -209,3 +209,14 @@ ul.bxslider {
   font-size: .85em;
   padding: 10px;
 }
+
+@media only screen and (max-width: 924px) {
+
+  .bx-wrapper .bx-pager,
+  .bx-wrapper .bx-pager,
+  .bx-wrapper .bx-controls-auto {
+    position: absolute;
+    bottom: 150px;
+    width: 100%;
+  }
+}
