--- a/src/components/Homepage/WebVid/jquery.bxslider.css
+++ b/src/components/Homepage/WebVid/jquery.bxslider.css
@@ -36,7 +36,7 @@ ul.bxslider {
 .bx-wrapper .bx-pager,
 .bx-wrapper .bx-controls-auto {
   position: absolute;
-  bottom: 200px;
+  bottom: 20%;
   width: 100%;
 }
 
@@ -210,7 +210,7 @@ ul.bxslider {
   padding: 10px;
 }
 
-@media only screen and (max-width: 924px) {
+@media only screen and (max-width: 959px) {
 
   .bx-wrapper .bx-pager,
   .bx-wrapper .bx-pager,
@@ -218,5 +218,9 @@ ul.bxslider {
     position: absolute;
     bottom: 150px;
     width: 100%;
+  }
+
+  .bx-wrapper .bx-pager {
+    padding-left: 50%;
   }
 }
