--- a/src/components/Homepage/WebVid/WebVid.css
+++ b/src/components/Homepage/WebVid/WebVid.css
@@ -34,12 +34,14 @@ video#herovideo {
 
 .vidContent {
     position: absolute;
-    top: 320px;
+    top: 280px;
     color: #f1f1f1;
-    width: 60%;
+    width: 700px;
     padding: 10px;
     text-align: left;
 }
+
+
 
 .vidContent h1 {
     font-family: 'Oswald', sans-serif;
@@ -117,12 +119,29 @@ video#herovideo {
     }
 
     .vidContent {
-        top: 220px;
-        width: 90%;
+
+        width: 570px;
+        top: 50%;
+        /* position the top  edge of the element at the middle of the parent */
+        left: 50%;
+        /* position the left edge of the element at the middle of the parent */
+
+        transform: translate(-50%, -50%);
     }
 
     .text-change {
         text-align: center;
     }
 
+    .buttonarea {
+        text-align: center;
+    }
+
+}
+
+@media only screen and (min-width: 1200px) {
+    video#herovideo {
+        width: 100%;
+        height: 100%;
+    }
 }
